--- a/home.html
+++ b/home.html
@@ -468,5 +468,16 @@
     </script>
     <script>AOS.init();</script>
     <script>feather.replace();</script>
+    <script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/665a1a2f9a809f19fb376e86/1hv7vciru';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script> 
 </body>
 </html>
