--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-center space-x-8">
-                        <a href="index.html" class="nav-link text-indigo-900 font-medium">Home</a>
+                        <a href="home.html" class="nav-link text-indigo-900 font-medium">Home</a>
                         <a href="real-estate.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Real Estate</a>
                         <a href="stocks.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Stocks</a>
                         <a href="bonds.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Bonds</a>
