--- a/bonds.html
+++ b/bonds.html
@@ -41,7 +41,7 @@
         </div>
         <div class="hidden md:block">
           <div class="ml-10 flex items-center space-x-8">
-            <a href="index.html" class="nav-link text-indigo-900 font-medium">Home</a>
+            <a href="home.html" class="nav-link text-indigo-900 font-medium">Home</a>
             <a href="real-estate.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Real Estate</a>
             <a href="stocks.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Stocks</a>
             <a href="bonds.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Bonds</a>
@@ -125,7 +125,7 @@
     </div>
   </section>
 
-  <!-- Footer (same as index.html) -->
+  <!-- Footer (same as home.html) -->
   <footer class="bg-gray-900 text-white pt-16 pb-8">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="grid md:grid-cols-4 gap-12 mb-12">
