--- a/stocks.html
+++ b/stocks.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+x<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -42,16 +42,16 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-20 items-center">
                 <div class="flex-shrink-0 flex items-center">
-                    <a href="index.html" class="text-2xl font-bold text-indigo-800">HORIZON</a>
+                    <a href="home.html" class="text-2xl font-bold text-indigo-800">HORIZON</a>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-center space-x-8">
-                        <a href="index.html" class="nav-link text-indigo-900 font-medium">Home</a>
+                        <a href="home.html" class="nav-link text-indigo-900 font-medium">Home</a>
                         <a href="real-estate.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Real Estate</a>
                         <a href="stocks.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Stocks</a>
                         <a href="bonds.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Bonds</a>
                         <a href="crypto.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Crypto</a>
-                        <a href="sign up.html" class="px-6 py-2 bg-indigo-700 text-white rounded-full hover:bg-indigo-800 transition">Sign Up</a>
+                        <a href="sign up.php" class="px-6 py-2 bg-indigo-700 text-white rounded-full hover:bg-indigo-800 transition">Sign Up</a>
                     </div>
                 </div>
                 <div class="-mr-2 flex md:hidden">
