--- a/crypto.html
+++ b/crypto.html
@@ -46,7 +46,7 @@
                         <a href="stocks.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Stocks</a>
                         <a href="bonds.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Bonds</a>
                         <a href="crypto.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Crypto</a>
-                        <a href="sign up.html" class="px-6 py-2 bg-indigo-700 text-white rounded-full hover:bg-indigo-800 transition">Sign Up</a>
+                        <a href="sign up.php" class="px-6 py-2 bg-indigo-700 text-white rounded-full hover:bg-indigo-800 transition">Sign Up</a>
                     </div>
                 </div>
                 <div class="-mr-2 flex md:hidden">
