--- a/crypto.html
+++ b/crypto.html
@@ -42,12 +42,12 @@
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-center space-x-8">
-                        <a href="index.html" class="nav-link text-indigo-900 font-medium">Home</a>
+                        <a href="home.html" class="nav-link text-indigo-900 font-medium">Home</a>
                         <a href="real-estate.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Real Estate</a>
                         <a href="stocks.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Stocks</a>
                         <a href="bonds.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Bonds</a>
                         <a href="crypto.html" class="nav-link text-gray-600 hover:text-indigo-900 transition">Crypto</a>
-                        <a href="sign up.html" class="px-6 py-2 bg-indigo-700 text-white rounded-full hover:bg-indigo-800 transition">Sign Up</a>
+                        <a href="sign up.php" class="px-6 py-2 bg-indigo-700 text-white rounded-full hover:bg-indigo-800 transition">Sign Up</a>
                     </div>
                 </div>
                 <div class="-mr-2 flex md:hidden">
