--- a/crypto.html
+++ b/crypto.html
@@ -237,67 +237,52 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer class="bg-gray-900 text-white pt-16 pb-8">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid md:grid-cols-4 gap-12 mb-12">
-                <div>
-                    <h3 class="text-xl font-bold mb-6">Horizon Capital</h3>
-                    <p class="text-gray-400 mb-4">Premium investment solutions for discerning clients seeking wealth preservation and growth.</p>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i data-feather="twitter"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i data-feather="linkedin"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i data-feather="facebook"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i data-feather="instagram"></i></a>
-                    </div>
-                </div>
-                <div>
-                    <h4 class="text-lg font-semibold mb-6">Investments</h4>
-                    <ul class="space-y-3">
-                        <li><a href="real-estate.html" class="text-gray-400 hover:text-white transition">Real Estate</a></li>
-                        <li><a href="stocks.html" class="text-gray-400 hover:text-white transition">Stocks</a></li>
-                        <li><a href="bonds.html" class="text-gray-400 hover:text-white transition">Bonds</a></li>
-                        <li><a href="crypto.html" class="text-gray-400 hover:text-white transition">Crypto</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-lg font-semibold mb-6">Company</h4>
-                    <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">About Us</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Our Team</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">Careers</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition">News</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-lg font-semibold mb-6">Contact</h4>
-                    <ul class="space-y-3">
-                        <li class="flex items-start">
-                            <i data-feather="map-pin" class="w-5 h-5 mr-3 mt-0.5 text-gray-400"></i>
-                            <span class="text-gray-400">450 Park Avenue, New York, NY 10022</span>
-                        </li>
-                        <li class="flex items-center">
-                            <i data-feather="mail" class="w-5 h-5 mr-3 text-gray-400"></i>
-                            <span class="text-gray-400">info@horizoncapital.com</span>
-                        </li>
-                        <li class="flex items-center">
-                            <i data-feather="phone" class="w-5 h-5 mr-3 text-gray-400"></i>
-                            <span class="text-gray-400">+1 (212) 555-0100</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-gray-400 mb-4 md:mb-0">© 2023 Horizon Capital. All rights reserved.</p>
-                <div class="flex space-x-6">
-                    <a href="#" class="text-gray-400 hover:text-white transition">Privacy Policy</a>
-                    <a href="#" class="text-gray-400 hover:text-white transition">Terms of Service</a>
-                    <a href="#" class="text-gray-400 hover:text-white transition">Disclosures</a>
-                </div>
-            </div>
+ <!-- Footer -->
+  <footer class="bg-gray-900 text-white pt-16 pb-8">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="grid md:grid-cols-4 gap-12 mb-12">
+        <div>
+          <h3 class="text-xl font-bold mb-6">Horizon Capital</h3>
+          <p class="text-gray-400 mb-4">Premium investment solutions for discerning clients seeking wealth preservation and growth.</p>
         </div>
-    </footer>
+        <div>
+          <h4 class="text-lg font-semibold mb-6">Company</h4>
+          <ul class="space-y-3">
+            <li><a href="about.html" class="text-gray-400 hover:text-white transition">About Us</a></li>
+            <li><a href="privacy.html" class="text-gray-400 hover:text-white transition">Privacy Policy</a></li>
+            <li><a href="terms.html" class="text-gray-400 hover:text-white transition">Terms of Service</a></li>
+            <li><a href="disclosures.html" class="text-gray-400 hover:text-white transition">Disclosures</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="text-lg font-semibold mb-6">Investments</h4>
+          <ul class="space-y-3">
+            <li><a href="real-estate.html" class="text-gray-400 hover:text-white transition">Real Estate</a></li>
+            <li><a href="stocks.html" class="text-gray-400 hover:text-white transition">Stocks</a></li>
+            <li><a href="bonds.html" class="text-gray-400 hover:text-white transition">Bonds</a></li>
+            <li><a href="crypto.html" class="text-gray-400 hover:text-white transition">Crypto</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="text-lg font-semibold mb-6">Contact</h4>
+          <ul class="space-y-3 text-gray-400">
+            <li>450 Park Avenue, New York, NY 10022</li>
+            <li>info@horizoncapital.com</li>
+            <li>+1 (212) 555-0100</li>
+          </ul>
+        </div>
+      </div>
+      <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center">
+        <p class="text-gray-400 mb-4 md:mb-0">© 2025 Horizon Capital. All rights reserved.</p>
+        <div class="flex space-x-6">
+          <a href="privacy.html" class="text-gray-400 hover:text-white transition">Privacy Policy</a>
+          <a href="terms.html" class="text-gray-400 hover:text-white transition">Terms of Service</a>
+          <a href="disclosures.html" class="text-gray-400 hover:text-white transition">Disclosures</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
     <script>
       AOS.init();
       feather.replace();
